# sharepyutil

./: .gitattributes  .gitignore  LICENSE  Pipfile  pyproject.toml
